--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="FIND TEENS HERE🔗🔞">
     <meta name="twitter:description" content="CLICK HERE✅">
-    <meta name="twitter:image" content="https://i.postimg.cc/LXg9LQBt/LP-POST-LINKS-12.png">
+    <meta name="twitter:image" content="https://i.postimg.cc/2yH7YZGk/IMG-4.jpg">
     <meta name="twitter:site" content="website">
     
     
